package pred3;

public class Referee {
}
